--- a/aula6/basic/back/package.json
+++ b/aula6/basic/back/package.json
@@ -22,6 +22,8 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
+    "@types/pg": "^8.6.5",
+    "@types/sequelize": "^4.28.14",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.19"
   }
