--- a/aula6/basic/front/package.json
+++ b/aula6/basic/front/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon --exec 'ts-node index.ts' -e ts"
+    "dev": "nodemon --exec 'ts-node index.ts' -e ts"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +12,6 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "express-session": "^1.17.3",
     "pg": "^8.8.0",
     "sequelize": "^6.22.0",
     "ts-node": "^10.9.1",
@@ -21,8 +20,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
-    "@types/express-session": "^1.17.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.0.2",
     "nodemon": "^2.0.19"
   }
 }
